manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afsb-dtp-staging-eks-cluster
  namespace:  afsb-dtp-staging-namespace # Use the namespace variable
  labels:
    app: afsb-dtp-staging-eks-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: afsb-dtp-staging-eks-cluster
  template:
    metadata:
      labels:
        app: afsb-dtp-staging-eks-cluster
    spec:
      containers:
        - name: afsb-dtp-staging-eks-cluster
          image: 806263047535.dkr.ecr.ap-southeast-1.amazonaws.com/afsb-dtp-staging-repo:latest
          ports:
            - containerPort: 80
