manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: afsb-dtp-staging-eks-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test-path
        pathType: Prefix   # Required field in networking.k8s.io/v1
        backend:
          service:
            name: afsb-dtp-staging-eks-service
            port:
              number: 80
